<resources>
    <string name="app_name">105590006_HW7</string>
    <string name="item_settings">settings</string>
    <!--log-->
    <string name="loadSaveState">loading save state.</string>
    <string name="menuItemDefault">menu item default</string>
    <!--main-->
    <string name="main_titel">Choose a Homework</string>
    <string name="button_jump_hw01">hw01</string>
    <string name="button_jump_hw02">hw02</string>
    <string name="button_jump_hw03">hw03</string>
    <string name="button_jump_hw04">hw04</string>
    <string name="button_jump_hw05">hw05</string>
    <string name="button_jump_hw06">hw06</string>
    <string name="button_jump_hw07">hw07</string>
    <!--main end-->

    <!--hw07-->
    <string name="hw07_tabLayout_left">Top stories</string>
    <string name="hw07_tabLayout_mid">Tech news</string>
    <string name="hw07_tabLayout_right">Cooking</string>
    <string name="hw07_tab_text1">These are the top stories: </string>
    <string name="hw07_tab_text2">Tech news you can use: </string>
    <string name="hw07_tab_text3">Cooking tips: </string>
    <!--hw07 end-->

    <!--hw06-->
    <!-- 04.2: Input controls -->
    <string name="hw06_textView_header01">Checkboxes_and_etc</string>
    <string name="hw06_toast_title">holo_EN:</string>
    <string name="hw06_checkBox_01">Gura</string>
    <string name="hw06_checkBox_02">Amelia</string>
    <string name="hw06_checkBox_03">Ina nis</string>
    <string name="hw06_checkBox_04">Calliope</string>
    <string name="hw06_checkBox_05">Kiara</string>
    <string name="hw06_button_showToast">show toast</string>
    <!-- 04.3: Menus and pickers -->
    <string name="hw06_textView_header02">Droid Cafe</string>
    <string name="hw06_button_showDate">Date</string>
    <string name="hw06_item_shopping_car">Shopping Car</string>
    <!--hw06 end-->

    <!--hw01-->
    <!--hw01 end-->

    <!--hw02-->
    <!--hw02 end-->

    <!--hw03-->
    <!--hw03 end-->

    <!--hw04-->
    <!--Implicit intents-->
    <string name="header2">Implicit intents</string>
    <string name="editText_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="editText_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="editText_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="button_cam">Take a picture</string>
    <!--Implicit intents end-->
    <!--hw04 end-->

    <string name="button_label_toast">Toast</string>
    <string name="button_say_hello">Say Hello</string>
    <string name="button_label_zero">Zero</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="scroll_header">Scrolling Text_A writings</string>
    <!-- HW05 -->
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operand_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="pow_operation_text">Pow</string>
    <string name="computationError">Error</string>
    <!--Clickable images-->
    <string name="title_clickable_images">Droid Desserts</string>
    <string name="image_donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="image_ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="image_froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

    <!-- HW05 end -->


    <string name="writings_title">The HW03:\n<br />Text and scrolling views.</string>
    <string name="writings_data">this is a apple.\n<br />
        Test url: www.youtube.com \n<br />
        \n<br />
    Open the ScrollingText2 app that you created in the Working with TextView Elements lesson.\n<br />
\n<br />
    Change the subheading so that it wraps within a column on the left that is 100 dp wide, as shown below.\n<br />
    Place the text of the article to the right of the subheading as shown below.\n<br />
        \n<br />
        Answer these questions\n<br />
Question 1\n<br />
How many views can you use within a ScrollView? Choose one:\n<br />
    One view only\n<br />
    One view or one view group\n<br />
    As many as you need\n<br />
\n<br />
Question 2\n<br />
Which XML attribute do you use in a LinearLayout to show views side by side? Choose one:\n<br />
    android:orientation="horizontal"\n<br />
    android:orientation="vertical"\n<br />
    android:layout_width="wrap_content"\n<br />
\n<br />
Question 3\n<br />
Which XML attribute do you use to define the width of the LinearLayout inside the scrolling view? Choose one:\n<br />
    android:layout_width="wrap_content"\n<br />
    android:layout_width="match_parent"\n<br />
    android:layout_width="200dp"\n<br />
\n<br />
Submit your app for grading\n<br />
Guidance for graders\n<br />
Check that the app has the following features:\n<br />
    The layout shows the subheading in the left column and the article text in the right column, as shown in the above figure.\n<br />
    The ScrollView includes a LinearLayout with two TextView elements.\n<br />
    The LinearLayout orientation is set to horizontal.\n<br />

</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>